<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_main_pane"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/user_name_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_name_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/user_name_label"/>
        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:textAlignment="center"
            android:hint="@string/user_name_prompt"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_email_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:id="@+id/user_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/user_email_label"/>
        <EditText
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:textAlignment="center"
            android:hint="@string/user_email_prompt"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_id_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_id_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/user_id_label"/>
        <EditText
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:textAlignment="center"
            android:hint="@string/user_id_prompt"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_gender_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_gender_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/user_gender_label"/>
        <EditText
            android:id="@+id/user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:textAlignment="center"
            android:hint="@string/user_gender_prompt"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_comment_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:id="@+id/user_comment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_comment_label"/>
        <EditText
            android:id="@+id/user_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:textAlignment="center"
            android:hint="@string/user_comment_prompt"/>
    </LinearLayout>

</LinearLayout>